--- a/dayCourse_client/client/public/index.html
+++ b/dayCourse_client/client/public/index.html
@@ -27,11 +27,14 @@
     -->
     <title>React App</title>
 
-   
+       <!-- <script>"//dapi.kakao.com/v2/maps/sdk.js?appkey=c5ab37dd55da986cc70adff7af8f35cd&libraries=services,clusterer,drawing"</script> -->
+       <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false&libraries=services,clusterer"
+     ></script>
+      
+     <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false"></script> -->
 
-   
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_API_KEY%autoload=false&libraries=services"></script> -->
     
-   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
