--- a/dayCourse_client/client/public/index.html
+++ b/dayCourse_client/client/public/index.html
@@ -28,8 +28,12 @@
     <title>React App</title>
 
        <!-- <script>"//dapi.kakao.com/v2/maps/sdk.js?appkey=c5ab37dd55da986cc70adff7af8f35cd&libraries=services,clusterer,drawing"</script> -->
-       <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false&libraries=services,clusterer"
-     ></script>
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false&libraries=services,clusterer"
+     ></script> -->
+
+     <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?%appkey=APIKEY%&auto=false&libraries=services"></script> -->
+     <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false"></script> -->
+     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false&libraries=services,clusterer"></script>
       
      <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false"></script> -->
 
