--- a/dayCourse_client/client/public/index.html
+++ b/dayCourse_client/client/public/index.html
@@ -34,6 +34,10 @@
      <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?%appkey=APIKEY%&auto=false&libraries=services"></script> -->
      <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false"></script> -->
      <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false&libraries=services,clusterer"></script>
+     <script
+        type="text/javascript"
+          src="https://sgisapi.kostat.go.kr/OpenAPI3/auth/javascriptAuth?consumer_key=%REACT_APP_SGIS_JS_KEY%">
+      </script>
       
      <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false"></script> -->
 
