add icons & modify create page

--- a/dayCourse_client/client/public/index.html
+++ b/dayCourse_client/client/public/index.html
@@ -38,6 +38,7 @@
         type="text/javascript"
           src="https://sgisapi.kostat.go.kr/OpenAPI3/auth/javascriptAuth?consumer_key=%REACT_APP_SGIS_JS_KEY%">
       </script>
+      <script src="https://kit.fontawesome.com/e56d79c615.js" crossorigin="anonymous"></script>
       
      <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false"></script> -->
 
