modify tab icon & title

--- a/dayCourse_client/client/public/index.html
+++ b/dayCourse_client/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/profile.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>데이코스</title>
 
        <!-- <script>"//dapi.kakao.com/v2/maps/sdk.js?appkey=c5ab37dd55da986cc70adff7af8f35cd&libraries=services,clusterer,drawing"</script> -->
     <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&auto=false&libraries=services,clusterer"
